--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "oh-my-zsh"]
-	path = stow/.config/bubski-dotfiles/oh-my-zsh
+	path = base/oh-my-zsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
 [submodule "oh-my-zsh-custom/plugins/zsh-autosuggestions"]
-	path = stow/.config/bubski-dotfiles/oh-my-zsh-custom/plugins/zsh-autosuggestions
+	path = base/oh-my-zsh-custom/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
 [submodule "oh-my-zsh-custom/themes/powerlevel10k"]
-	path = stow/.config/bubski-dotfiles/oh-my-zsh-custom/themes/powerlevel10k
+	path = base/oh-my-zsh-custom/themes/powerlevel10k
 	url = https://github.com/romkatv/powerlevel10k.git
 [submodule "oh-my-zsh-custom/plugins/zsh-syntax-highlighting"]
-	path = stow/.config/bubski-dotfiles/oh-my-zsh-custom/plugins/zsh-syntax-highlighting
+	path = base/oh-my-zsh-custom/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
