--- a/stow/tmux/.config/tmux/tmux.conf
+++ b/stow/tmux/.config/tmux/tmux.conf
@@ -1,2 +1,17 @@
 set -s default-terminal 'tmux-256color'
 set -g mouse on
+
+set-option -g history-limit 50000
+
+# for x in {0..255}; do  printf "\x1b[38;5;${x}mcolor%-5i\x1b[0m" $x ; if ! (( ($x + 1 ) % 8 )); then echo ; fi ; done
+set-option -g status-bg colour236
+set-option -g status-fg colour3
+set-option -g pane-border-style 'fg=color7,bg=color0'
+set-option -g pane-active-border-style 'fg=color0,bg=color7'
+
+bind -n m-Left select-pane -L
+bind -n m-Right select-pane -R
+bind -n m-Up select-pane -U
+bind -n m-Down select-pane -D
+
+set -g pane-border-status top
